# auto-deploy

./: .gitignore  README.md  pyproject.toml
src/auto_deploy_agent/: __init__.py  cli.py  command_analysis.py  graph.py  local.py  models.py  planner.py  safety.py
tests/: test_deploy_agent.py
