[project]
name = "auto-deploy-agent"
version = "0.1.0"
description = "LangGraph based agent that deploys GitHub web projects locally."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.21",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.scripts]
auto-deploy-agent = "auto_deploy_agent.cli:app"
deploy = "auto_deploy_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_deploy_agent"]
